[package]
name = "brush-traffic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "fs", "signal", "time"] }
reqwest = { version = "0.11.11" }
async-trait = { version = "0.1.57"}
anyhow = { version = "1.0.64"}
regex = { version = "1.6.0" }
lazy_static = { version = "1.4.0" }
async-channel = { version = "1.7.1"}
futures = { version = "0.3.24" }
fake-useragent = { version = "0.1.3"}
clap = { version = "3.1.18", features = ["derive"] }